2024-01-08T08:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7444823478 # 4
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 727 1148
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 728 1149
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-08]

2024-01-07T16:17:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7439355873 # 2
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 726 1147
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 727 1148
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-07]

2024-01-07T08:18:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7437028571 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 707 1114 / 724 1143
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 726 1147
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +1 +2 -0 -0 / 1 2