@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-08T08:20:19Z",
+  "timestamp" : "2024-01-08T16:19:38Z",
   "count_outdated" : 1143,
   "uniques_outdated" : 724,
-  "count" : 1149,
+  "count" : 1150,
   "uniques" : 728,
   "clones" : [
     {
@@ -34,9 +34,9 @@
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
