@@ -1,3 +1,12 @@
+2024-01-08T16:19:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7450197408 # 5
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
+* notice: last 14d: unq all: 3 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 728 1149
+* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 728 1150
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-08]
+
 2024-01-08T08:20:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7444823478 # 4
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
